tests/bad_programs/type_errors/scoping_return_same_name.notc
int main() {
    int returnValue = 0;
    {
        bool returnValue = true;
        return returnValue;
    }
    return returnValue;
}
